# DouyinModerator_Python

./: .gitignore  README.md  pyproject.toml
config/: dom_selectors.json
data/: gift_image_mappings.json
douyin_mod_manager/: app.py
douyin_mod_manager/core/: events.py  rate_limit.py  rules.py  sessions.py
douyin_mod_manager/features/: gift_thanks.py  risk.py  song_queue.py  templates.py
douyin_mod_manager/senders/: base.py  mock.py  webengine.py
douyin_mod_manager/sources/: base.py  dom_config.py  dom_parser.py  ffmpeg_proxy.py  gift_images.py  mock.py  webengine_dom.py
douyin_mod_manager/storage/: database.py  repositories.py
douyin_mod_manager/ui/: main_window.py
tests/: test_dom_parser.py  test_gift_images.py
tools/: demo_live_room.html
